--- a/src/components/DisplayParcel/styles.module.scss
+++ b/src/components/DisplayParcel/styles.module.scss
@@ -1,5 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 1 1 1;
   place-items: center;
+  padding: 50px;
+  border: solid 2px black;
 }
