--- a/src/components/DisplayParcel/styles.module.scss
+++ b/src/components/DisplayParcel/styles.module.scss
@@ -1,6 +1,9 @@
 .container {
   display: grid;
-  place-items: center;
-  padding: 50px;
+  padding: 20px;
   border: solid 2px black;
+}
+
+.map {
+  padding: 10px;
 }
