--- a/src/components/WalletConnectButton/styles.module.scss
+++ b/src/components/WalletConnectButton/styles.module.scss
@@ -1,14 +1,21 @@
-#WalletConnectButton {
+.button {
     padding: 10px 25px;
     background-color: #54a3ff;
     border-radius: 2rem;
     color: white;
     font-size: 20px;
     border: none;
-    cursor: pointer;
     margin: 10px;
 }
 
-#WalletConnectButton:hover {
+#connected {
+    background-color: green;
+}
+
+#disconnected {
+    cursor: pointer;    
+}
+
+#disconnected:hover {
     transform: scale(1.05);
 }
