--- a/src/components/WalletConnectButton/styles.module.scss
+++ b/src/components/WalletConnectButton/styles.module.scss
@@ -7,7 +7,8 @@
     border: none;
     margin: 10px;
     position: absolute;
-    right: 50px;
+    right: 20px;
+    min-height: 74px;
 }
 
 #walletConnectedContentContainer {
@@ -17,14 +18,20 @@
 }
 
 #disconnectButton {
-    margin-right: 15px;
+    margin-right: 20px;
     width: 30px;
     height: 30px;
-    background-color: red;
+    border: 2px solid white;
     border-radius: 50%;
     cursor: pointer;
     display: flex;
+    text-align: center;
+    justify-content: center;
     align-items: center;
+}
+
+#disconnectButton:hover {
+    background-color: red;
 }
 
 #connected {
