Change border to box-shadow

--- a/src/components/DisplayParcel/styles.module.scss
+++ b/src/components/DisplayParcel/styles.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   padding: 20px;
-  border: solid 2px black;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .map {
